integrate sockets, create and join

--- a/node_server/package.json
+++ b/node_server/package.json
@@ -28,7 +28,9 @@
         "errorhandler": "^1.5.1",
         "express": "^4.17.1",
         "lusca": "^1.6.1",
-        "mongoose": "^5.7.5",
+        "mongoose": "^5.9.7",
+        "mongoose-auto-increment": "^5.0.1",
+        "socket.io": "^2.3.0",
         "websocket": "^1.0.31",
         "winston": "^3.2.1"
     },
@@ -41,8 +43,10 @@
         "@types/express": "^4.17.1",
         "@types/jest": "^24.0.23",
         "@types/lusca": "^1.6.1",
-        "@types/mongoose": "^5.5.18",
+        "@types/mongoose": "^5.7.10",
+        "@types/mongoose-auto-increment": "^5.0.32",
         "@types/node": "^12.7.8",
+        "@types/socket.io": "^2.1.4",
         "@types/supertest": "^2.0.8",
         "@types/websocket": "^1.0.0",
         "@types/winston": "^2.4.4",
