--- a/node_server/package.json
+++ b/node_server/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "errorhandler": "^1.5.1",
         "express": "^4.17.1",
@@ -38,6 +39,7 @@
         "@types/body-parser": "^1.17.1",
         "@types/chai": "^4.2.3",
         "@types/compression": "^1.0.1",
+        "@types/cors": "^2.8.6",
         "@types/errorhandler": "^0.0.32",
         "@types/eslint": "^6.1.1",
         "@types/express": "^4.17.1",
