--- a/node_server/package.json
+++ b/node_server/package.json
@@ -1,12 +1,66 @@
 {
-  "name": "node-server",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "http-errors": "~1.6.3",
-    "websocket": "^1.0.31"
-  }
+    "name": "express-typescript-starter",
+    "version": "0.1.0",
+    "description": "A starting point for Node.js express apps with TypeScript",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Microsoft/TypeScript-Node-Starter"
+    },
+    "author": "Bowden Kelly",
+    "license": "MIT",
+    "scripts": {
+        "start": "ts-node src/server.ts",
+        "build": "npm run lint && npm run build-ts",
+        "serve": "node dist/server.js",
+        "watch-node": "nodemon dist/server.js",
+        "test": "jest --forceExit --coverage --verbose",
+        "watch-test": "npm run test -- --watchAll",
+        "build-ts": "tsc",
+        "watch-ts": "tsc -w",
+        "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+        "debug": "npm run build && npm run watch-debug",
+        "serve-debug": "nodemon --inspect dist/server.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "errorhandler": "^1.5.1",
+        "express": "^4.17.1",
+        "lusca": "^1.6.1",
+        "mongoose": "^5.9.7",
+        "mongoose-auto-increment": "^5.0.1",
+        "socket.io": "^2.3.0",
+        "websocket": "^1.0.31",
+        "winston": "^3.2.1"
+    },
+    "devDependencies": {
+        "@types/body-parser": "^1.17.1",
+        "@types/chai": "^4.2.3",
+        "@types/compression": "^1.0.1",
+        "@types/cors": "^2.8.6",
+        "@types/errorhandler": "^0.0.32",
+        "@types/eslint": "^6.1.1",
+        "@types/express": "^4.17.1",
+        "@types/jest": "^24.0.23",
+        "@types/lusca": "^1.6.1",
+        "@types/mongoose": "^5.7.10",
+        "@types/mongoose-auto-increment": "^5.0.32",
+        "@types/node": "^12.7.8",
+        "@types/socket.io": "^2.1.4",
+        "@types/supertest": "^2.0.8",
+        "@types/websocket": "^1.0.0",
+        "@types/winston": "^2.4.4",
+        "@typescript-eslint/eslint-plugin": "^2.3.1",
+        "@typescript-eslint/parser": "^2.3.1",
+        "chai": "^4.2.0",
+        "eslint": "^6.4.0",
+        "jest": "^24.9.0",
+        "nodemon": "^1.19.2",
+        "supertest": "^4.0.2",
+        "ts-jest": "^24.1.0",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.6.3"
+    }
 }
