--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-#
-  audioplayers: ^0.15.0
 
+  #Custom Plugins
+  audioplayers: ^0.15.0
+  shared_preferences: ^0.5.6+3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
