--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   socket_io_client: ^0.9.9
+  enum_to_string: ^1.0.9
 
 dev_dependencies:
   flutter_test:
