Add Room Exist Condition

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - assets/speaker_icon.png
     - assets/google.png
     - assets/roomisfull.png
+    - assets/noroom.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
