--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   path_provider: ^1.5.1
   socket_io_client: ^0.9.9
   enum_to_string: ^1.0.9
-  
+  flutter_facebook_login: ^3.0.0
+  http: ^0.12.0+2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -64,6 +66,8 @@ flutter:
     - assets/diamonds.png
     - assets/hearts.png
     - assets/spades.png
+    - assets/signup.png
+
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
