--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   socket_io_client: ^0.9.9
   enum_to_string: ^1.0.9
   sliding_up_panel: ^1.0.2
+  provider: ^4.0.1
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
