Change in the Workflow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,11 @@ flutter:
         - asset: assets/fonts/Montserrat-Regular.ttf
         - asset: assets/fonts/Montserrat-Bold.ttf
           weight: 700
+    - family: Cinzel
+      fonts:
+        - asset: assets/fonts/Cinzel-Regular.ttf
+        - asset: assets/fonts/Cinzel-Bold.ttf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
