--- a/node_server/package.json
+++ b/node_server/package.json
@@ -31,6 +31,7 @@
         "lusca": "^1.6.1",
         "mongoose": "^5.9.7",
         "mongoose-auto-increment": "^5.0.1",
+        "shortid": "^2.2.15",
         "socket.io": "^2.3.0",
         "websocket": "^1.0.31",
         "winston": "^3.2.1"
