--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   enum_to_string: ^1.0.9
   sliding_up_panel: ^1.0.2
   provider: ^4.0.1
-  
+  cloud_firestore: ^0.13.5
+  firebase_auth: ^0.16.0
+  flutter_facebook_login: ^1.2.0
+  google_sign_in: ^4.0.1+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
