--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sliding_up_panel: ^1.0.2
   provider: ^4.0.1
   badges: ^1.1.1
+  multiselect_formfield: ^0.1.3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
