create store tabs, in game currency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/no_person.png
     - assets/person-fb.jpg
     - assets/game_mat_royale.jpg
+    - assets/money.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
