--- a/node_server/package.json
+++ b/node_server/package.json
@@ -34,7 +34,28 @@
         "shortid": "^2.2.15",
         "socket.io": "^2.3.0",
         "websocket": "^1.0.31",
-        "winston": "^3.2.1"
+        "winston": "^3.2.1",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.6.3",
+        "@types/body-parser": "^1.17.1",
+        "@types/chai": "^4.2.3",
+        "@types/compression": "^1.0.1",
+        "@types/cors": "^2.8.6",
+        "@types/errorhandler": "^0.0.32",
+        "@types/eslint": "^6.1.1",
+        "@types/express": "^4.17.1",
+        "@types/jest": "^24.0.23",
+        "@types/lusca": "^1.6.1",
+        "@types/mongoose": "^5.7.10",
+        "@types/mongoose-auto-increment": "^5.0.32",
+        "@types/node": "^12.7.8",
+        "@types/socket.io": "^2.1.4",
+        "@types/supertest": "^2.0.8",
+        "@types/websocket": "^1.0.0",
+        "@types/winston": "^2.4.4",
+        "@typescript-eslint/eslint-plugin": "^2.3.1",
+        "@typescript-eslint/parser": "^2.3.1",
+        "@types/shortid": "0.0.29"
     },
     "devDependencies": {
         "@types/body-parser": "^1.17.1",
@@ -60,8 +81,9 @@
         "jest": "^24.9.0",
         "nodemon": "^1.19.2",
         "supertest": "^4.0.2",
-        "ts-jest": "^24.1.0",
-        "ts-node": "^8.4.1",
-        "typescript": "^3.6.3"
-    }
+        "ts-jest": "^24.1.0"
+    },
+    "engines": {
+        "node": "10.x"
+      }
 }
