Changes the font family

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,12 @@ flutter:
     - family: VT323
       fonts:
         - asset: assets/fonts/VT323-Regular.ttf
+    - family: B612
+      fonts:
+        - asset: assets/fonts/B612-Regular.ttf
+        - asset: assets/fonts/B612-Bold.ttf
+        - asset: assets/fonts/B612-Italic.ttf
+        - asset: assets/fonts/B612-BoldItalic.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
