--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
 
   #Custom Plugins
+  url_launcher: ^5.5.0
   shared_preferences: ^0.5.6+3
   flutter_local_notifications: ^0.6.0
   path_provider: ^1.5.1
@@ -77,6 +78,7 @@ flutter:
     - assets/frame_blue.png
     - assets/frame_purple.png
     - assets/game_mat_basic.png
+    - assets/zairza_logo.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
