--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   #Custom Plugins
   intro_views_flutter:
     git: git://github.com/aagarwal1012/IntroViews-Flutter
+  introduction_screen: ^1.0.7
   url_launcher: ^5.5.0
   shared_preferences: ^0.5.6+3
   flutter_local_notifications: ^0.6.0
@@ -112,6 +113,9 @@ flutter:
     - family: Helvetica
       fonts:
         - asset: assets/fonts/helvetica-light.ttf
+    - family: FiraFlott
+      fonts:
+        - asset:  assets/fonts/FiraFlott.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
