--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/game_mat_basic.png
     - assets/zairza_logo.jpg
     - assets/animations/knew_that.gif
+    - assets/animations/seriously.gif
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
