--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - assets/zairza_logo.jpg
     - assets/animations/knew_that.gif
     - assets/animations/seriously.gif
+    - assets/rewards.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
